--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "todolistcrud",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.16.3"
+  },
   "scripts": {
     "ng": "ng",
     "start": "node backend/server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install npm && run build",
     "build": "ng build",
+    "heroku-postbuild": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
